--- a/app/views/notify/_note_email.html.haml
+++ b/app/views/notify/_note_email.html.haml
@@ -4,11 +4,12 @@
 - note_style = local_assigns.fetch(:note_style, "")
 - include_stylesheet_link = local_assigns.fetch(:include_stylesheet_link, true)
 
+- author = local_assigns.fetch(:author) { note.author }
 - discussion = local_assigns.fetch(:discussion) { note.discussion } if note.part_of_discussion?
 
 %p{ style: "color: #777777;" }
   = succeed ':' do
-    = link_to note.author_name, user_url(note.author)
+    = link_to author.name, user_url(author)
     - if discussion.nil?
       = link_to 'commented', target_url
     - else
@@ -33,4 +34,4 @@
       locals: { diff_file: discussion.diff_file }
 
 .md{ style: note_style }
-  = markdown(note.note, pipeline: :email, author: note.author, current_user: @recipient, issuable_reference_expansion_enabled: true)
+  = markdown(note.note, pipeline: :email, author: author, current_user: @recipient, issuable_reference_expansion_enabled: true)
